--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
-    Theme Name: First Theme
-    Theme URI: https://github.com/XhuljanoKocia
-    Author: Xhuljano Koçia
-    Author URI: https://github.com/XhuljanoKocia
-    Description: This is an awsome theme
-    Version: 0.1 alpha
-    License: GNU General Public License v3
-    License URI: https://www.gnu.org/licenses/gpl-3.0.en.html
-    Tags: black, white, responsive, one-column, two-columns, featured-images, custom-menu, custom-header, post-formats
+	Theme Name: Awesome Theme
+	Theme URI: https://github.com/XhuljanoKocia
+	Author: Xhuljano Koçia
+	Author URI: https://github.com/XhuljanoKocia
+	Description: This is an awesome theme
+	Version: 0.1 alpha
+	License: GNU General Public License v2 or later
+	License URI: http://www.gnu.org/licenses/gpl-2.0.html
+	Tags: black, white, responsive, one-column, two-columns, featured-images, custom-menu, custom-header, post-formats
 */
